--- a/LSDS-lab2/pom.xml
+++ b/LSDS-lab2/pom.xml
@@ -34,6 +34,16 @@
             <version>4.11</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20160810</version>
+        </dependency>
+        <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.9.0</version>
+        </dependency>
     </dependencies>
 
 
